# ubuntu-touch-examples

./: README.md
cxxplugin-cmake/: CMakeLists.txt  manifest.json.in
cxxplugin-cmake/app/: CMakeLists.txt  cxxplugin-cmake.qml  myapp.desktop.in
cxxplugin-cmake/app/tests/autopilot/: run
cxxplugin-cmake/app/tests/autopilot/cxxplugin-cmake/main/: test_main.py
cxxplugin-cmake/backend/: CMakeLists.txt
cxxplugin-cmake/backend/modules/Myapp/: backend.cpp  backend.h  qmldir
cxxplugin-cmake/backend/tests/unit/: tst_mytype.qml
cxxplugin-cmake/cmake/: Click.cmake
cxxplugin-qmake/: cxxplugin-qmake.pro  manifest.json.in
cxxplugin-qmake/app/: Main.qml
cxxplugin-qmake/backend/App/: App.pro  backend.cpp  backend.h  qmldir
cxxplugin-qmake/backend/tests/unit/: tst_mytype.qml
go/: go.goproject  manifest.json  myapp.desktop
go/share/go/: Main.qml
go/src/go/: main.go
html5/: app.desktop  manifest.json
html5/www/: index.html
simpleui-cmake/: CMakeLists.txt  manifest.json.in
simpleui-cmake/app/: CMakeLists.txt  myapp.desktop.in  simpleui-cmake.qml
simpleui-cmake/app/tests/autopilot/: run
simpleui-cmake/app/tests/autopilot/simpleui-cmake/main/: test_main.py
simpleui-qmake/: manifest.json.in  simpleui-qmake.pro
simpleui-qmake/app/: Main.qml  app.pro
simpleui-qmlproject/: Main.qml  Makefile  app.desktop  manifest.json
simpleui-qmlproject/tests/autopilot/: run
simpleui-qmlproject/tests/autopilot/simpleui-qmlproject/: __init__.py  test_main.py
